SFDCProject/src/objects/Lead360_Int_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Has list of values to be mapped to Lead360 for integration</description>
    <fields>
        <fullName>Lead360_Value__c</fullName>
        <label>Lead360 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Field__c</fullName>
        <label>Lookup Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Value__c</fullName>
        <label>SF Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Lead360 Integration Mapping</label>
</CustomObject>